# black-tabby-formatter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  black_tabby_formatter.py  requirements-dev.txt  setup.cfg
tests/: main_test.py
